@@ -1,43 +1,37 @@
 # Makefile for popt library.
 
-AUTOMAKE_OPTIONS = 1.4 foreign
+ACLOCAL_AMFLAGS = -I m4
+AM_CPPFLAGS = -I. -I$(top_srcdir)
 
 LINT =		splint
 MCCABE =	pmccabe
 
-EXTRA_DIST = config.rpath lookup3.c autogen.sh CHANGES $(man_MANS) \
-	m4/Makefile.in \
+EXTRA_DIST = lookup3.c autogen.sh CHANGES  \
 	footer_no_timestamp.html libpopt.vers \
-	testit.sh test-poptrc \
+	$(TESTS) test-poptrc\
 	popt.xcodeproj/project.pbxproj \
-	popt.ps
+	popt.ps Doxyfile
 
 SUBDIRS = po . auto
 
-AM_CPPFLAGS = -I. -I$(top_srcdir)
 
 noinst_HEADERS = poptint.h system.h
 
-noinst_PROGRAMS = test1 test2 tdict # test3
-test1_SOURCES = test1.c
-test1_LDFLAGS = 
-test1_LDADD = $(usrlib_LTLIBRARIES)
-test2_SOURCES = test2.c
-test2_LDFLAGS = 
-test2_LDADD = $(usrlib_LTLIBRARIES)
-#test3_SOURCES = test3.c
-#test3_LDFLAGS = 
-#test3_LDADD = $(usrlib_LTLIBRARIES)
-tdict_SOURCES = tdict.c
-tdict_LDFLAGS = 
-tdict_LDADD = $(usrlib_LTLIBRARIES)
+check_PROGRAMS  = test1 test2 tdict 
 
-noinst_SCRIPTS = testit.sh
+check_SCRIPTS	= $(TESTS)
 
-TESTS_ENVIRONMENT = \
-test1="$(top_builddir)/test1"
 
-TESTS = $(top_srcdir)/testit.sh
+test1_CPPFLAGS  = -I $(top_builddir) 
+test2_CPPFLAGS  = -I $(top_builddir) 
+tdict_CPPFLAGS  = -I $(top_builddir) 
+test1_LDADD  = $(top_builddir)/$(usrlib_LTLIBRARIES)
+test2_LDADD  = $(top_builddir)/$(usrlib_LTLIBRARIES)
+tdict_LDADD  = $(top_builddir)/$(usrlib_LTLIBRARIES)
+
+TESTS_ENVIRONMENT = top_srcdir=$(top_srcdir) PATH=.:../src:$$PATH \
+       $(SHELL) 
+TESTS = $(top_builddir)/testit.sh
 
 include_HEADERS = popt.h
 
@@ -54,7 +48,7 @@ if HAVE_LD_VERSION_SCRIPT
 libpopt_la_LDFLAGS += -Wl,--version-script=$(top_srcdir)/libpopt.vers
 endif
 
-man_MANS = popt.3
+dist_man_MANS = popt.3
 
 BUILT_SOURCES = popt.pc # popt.lcd
 
@@ -72,36 +66,43 @@ popt.lcd: Makefile.am ${libpopt_la_SOURCES} ${include_HEADERS} ${noinst_HEADERS}
 sources:
 	@echo $(libpopt_la_SOURCES:%=popt/%)
 
-.PHONY: lint
+if HAVE_SPLINT
 lint:
 	$(LINT) ${DEFS} ${INCLUDES} test1.c ${libpopt_la_SOURCES}
 
-.PHONY:	mccabe
+endif HAVE_SPLINT 
+
+if HAVE_MCCABE
 mccabe:
 	$(MCCABE) $(libpopt_la_SOURCES) | sort -n -r | head -n 10
+endif HAVE_MCCABE
 
-.PHONY: doxygen
+if DOXYGEN_ENABLE
+
 doxygen: Doxyfile
 	rm -rf doxygen
 	mkdir -p doxygen
 	doxygen
 
-.PHONY:	lcov-reset	# run lcov from scratch, always
+endif DOXYGEN_ENABLE
+
+if HAVE_LCOV
+# run lcov from scratch, always
 lcov-reset:
 	make lcov-run
 	make lcov-report
 
-.PHONY:	lcov		# run lcov from scratch if the dir is not there
+# run lcov from scratch if the dir is not there
 lcov:
 	make lcov-reset
 
-.PHONY:	lcov-run	# reset run coverage tests
+# reset run coverage tests
 lcov-run:
 	@-rm -rf lcov
 	find . -name "*.gcda" -exec rm {} \;
 	make check
 
-.PHONY:	lcov-report	# generate report based on current coverage data
+# generate report based on current coverage data
 lcov-report:
 	mkdir lcov
 	lcov --directory . --capture --output-file lcov/lcov.info
@@ -111,8 +112,4 @@ lcov-report:
 	mv lcov/lcov.cleaned.info lcov/lcov.info
 	genhtml -t "$(PACKAGE_STRING)" -o lcov lcov/lcov.info
 
-#.PHONY:	lcov-upload
-#lcov-upload: lcov
-#	rsync -rvz -e ssh --delete lcov/* ???
-
-ACLOCAL_AMFLAGS = -I m4
+endif HAVE_LCOV
