@@ -1,5 +1,5 @@
 <version>
-  1.15
+  @PACKAGE_VERSION@
 </version>
  
 <headers>
