@@ -255,6 +255,8 @@ int main(int argc, const char ** argv)
     optCon = poptGetContext("test1", argc, argv, options, 0);
 /*@=temptrans@*/
     (void) poptReadConfigFile(optCon, "./test-poptrc");
+/* XXXX: make distcheck succed : test1 is in popt-<version>/_build */
+    (void) poptReadConfigFile(optCon, "../../test-poptrc");
     (void) poptReadDefaultConfig(optCon, 1);
 
     poptSetExecPath(optCon, ".", 1);
