@@ -1,4 +1,5 @@
 1.15 -> 1.16:
+    - devzero2000: update to new autofu/automagic. Do make distcheck work.
     - add lv.po, update translations (Translation Project).
     - include xcode project files in distributed popt tar ball.
     - make distcheck is now squeaky clean.
